--- a/WiseEye/package.json
+++ b/WiseEye/package.json
@@ -29,7 +29,9 @@
     "@react-native-firebase/database": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13"
+    "@react-navigation/native-stack": "^6.9.13",
+    "react-native-qrcode-scanner": "^1.5.5"
+
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
