--- a/WiseEye/package.json
+++ b/WiseEye/package.json
@@ -10,28 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.71.1",
-    "react-native-asset": "^2.1.1",
-    "react-native-bootsplash": "^4.7.5",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-element-dropdown": "^2.9.0",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-linear-gradient": "^2.8.2",
-    "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.4.2",
-    "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
-    "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.11.0",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/database": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "react-native-qrcode-scanner": "^1.5.5"
-
+    "react": "18.2.0",
+    "react-native": "0.71.1",
+    "react-native-asset": "^2.1.1",
+    "react-native-bootsplash": "^4.7.5",
+    "react-native-camera": "^4.2.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-linear-gradient": "^2.8.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-svg": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
