--- a/WiseEye/package.json
+++ b/WiseEye/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/database": "^18.3.0",
+    "@react-native-firebase/messaging": "^18.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -31,7 +32,8 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.11.0"
+    "react-native-svg": "^13.11.0",
+    "react-native-webview": "^11.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
