--- a/WiseEye/package.json
+++ b/WiseEye/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^3.24.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.11.0",
+    "@notifee/react-native": "^7.7.1",
     "react-native-webview": "^11.26.1"
   },
   "devDependencies": {
